# full-stack-akl-mar23-filters-demo

./: .gitignore  README.rst  pyproject.toml
demo_app/: asgi.py  settings.py  urls.py
demo_app/demo_app/: urls.py  wsgi.py
importer/: filters.py  json.py  models.py  views.py
importer/fixtures/: demo.yaml
importer/migrations/: 0001_initial.py
